Closed
Bug 1786353
Opened 4 years ago
Closed 4 years ago
Excessive Table Cell Size With `vertical-align: baseline` in Vertical Writing Mode
Categories
(Core :: Layout: Tables, defect)
Core
Layout: Tables
Tracking
()
VERIFIED
FIXED
106 Branch
People
(Reporter: dshin, Assigned: dshin)
Details
Attachments
(2 files)
STR: Load the attached test case.
Expected Behaviour: Table cells should be sized to that of the inner div's.
Actual Behaviour: The cells are twice as wide as the inner divs.
Goes away if vertical-align is unset or writing-mode: horizontal-tb.
Looks to be caused by this code here that does not consider the logical size.
| Assignee | ||
Updated•4 years ago
|
Assignee: nobody → dshin
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•4 years ago
|
||
Pushed by dshin@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/15df26cfaf48
Use logical sides when calculating table cell baseline. r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/35580 for changes under testing/web-platform/tests
Upstream PR merged by moz-wptsync-bot
Comment 5•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox106:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
Updated•4 years ago
|
QA Whiteboard: [qa-106b-p2]
I managed to reproduce this issue using the testcase from the Description on Firefox 105.0.3(build ID: 20221007134813) on macOS 12. Verified as fixed on Firefox 106.0(build ID: 20221010110315) and Nightly 107.0a1(build ID: 20221012094509) on macOS 12, Windows 10, Ubuntu 22.
You need to log in
before you can comment on or make changes to this bug.
Description
•