Bug 1786353 - Use logical sides when calculating table cell baseline. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D155396